@@ -1,4 +1,5 @@
 4.0.2
+ * Fix slow keycache load which blocks startup for tables with many sstables (CASSANDRA-14898)
  * Fixed broken classpath when multiple jars in build directory (CASSANDRA-17129)
  * DebuggableThreadPoolExecutor does not propagate client warnings (CASSANDRA-17072)
  * internode_send_buff_size_in_bytes and internode_recv_buff_size_in_bytes have new names. Backward compatibility with the old names added (CASSANDRA-17141)
